# statcast-bayesian-pitch-model

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/data/: posteriors.json
frontend/src/: App.jsx
notebooks/: 01_data_acquisition.ipynb  02_eda_and_feature_engineering.ipynb  03_bayesian_model.ipynb  04_results_and_diagnostics.ipynb
src/: __init__.py  baseline.py  data.py  export_posteriors.py  features.py  model.py  visualize.py
tests/: test_baseline.py  test_data.py  test_features.py  test_model.py
